--- a/虚拟语气.md
+++ b/虚拟语气.md
@@ -1,7 +1,8 @@
 听课链接：[10分钟搞定虚拟语气](https://www.bilibili.com/video/BV1z4411u79p?from=search&seid=14122421081112136679)
-我们中学时期被老师耽误了，教材人为的给了很多生硬的概念来把原本有机一体的知识，划分的支离破碎，难以理解。
 
-笔记：
+```我们中学时期被老师耽误了，教材人为的给了很多生硬的概念来把原本有机一体的知识，划分的支离破碎，难以理解。```
+
+#### 笔记：
 - 1. Present Conditional 这个表达的是一般的规律，常识的假设；if + 一般现在时，主句一般现在时
 例如：If I am surrounded by strangers,I feel unsafe.
 
@@ -22,7 +23,7 @@
 
 
 [高考英语语法全解析之虚拟语气](https://www.bilibili.com/video/BV17t411W73e?from=search&seid=11870140865896940500)
-笔记：
+#### 笔记：
 英语中的语气有：陈述语气，祈使语气和虚拟语气 ，虚拟语气就是”说假话“；虚拟语气通常用在条件句中。条件句分为两种，一种是假的条件句就是虚拟语气，一种是真实的假设。
 
 
