--- a/一个公式搞定所有从句.md
+++ b/一个公式搞定所有从句.md
@@ -31,3 +31,5 @@ We all know the fact [that you are a pig]
 5. 主句缺什么成分就是什么成分；主语从句还有：1.引导词开头，且主从句之间没有逗号;2. 为了防止头重脚轻，用it 引导做形式主语：It is a fact that you are a pig. = That you are a pig is a fact.
 6. 宾语从句：1.在及物动词后；2.在介词后；3.及物动词加双宾语；4.[形式宾语](https://www.bilibili.com/video/BV1nb411G7ny/?spm_id_from=333.788.videocard.1)
 7. 表语关键是找到系动词
+
+另注意：定语从句，which 是修饰的名词不确定，随意的情况，that 通常是确定的情况
