--- a/一个公式搞定所有从句.md
+++ b/一个公式搞定所有从句.md
@@ -7,7 +7,7 @@ What you said is right
 I don't know what you talk about. 
 
 #### 表 
-It is what it is.
+The problem is when we can get a pay rise.
 
 ```主句是不完整的，需要从句来补充```
 ***
@@ -32,4 +32,4 @@ We all know the fact [that you are a pig]
 6. 宾语从句：1.在及物动词后；2.在介词后；3.及物动词加双宾语；4.[形式宾语](https://www.bilibili.com/video/BV1nb411G7ny/?spm_id_from=333.788.videocard.1)
 7. 表语关键是找到系动词
 
-另注意：定语从句，which 是修饰的名词不确定，随意的情况，that 通常是确定的情况
+另注意：1. 定语从句，which 是修饰的名词不确定，随意的情况，that 通常是确定的情况 2. 主语， 宾语，表语，同位语 都是在说是一件事，是一种对事情的描述，所有就如同名词一样，就叫名词性从句。
