--- a/一个公式搞定所有从句.md
+++ b/一个公式搞定所有从句.md
@@ -32,4 +32,13 @@ We all know the fact [that you are a pig]
 6. 宾语从句：1.在及物动词后；2.在介词后；3.及物动词加双宾语；4.[形式宾语](https://www.bilibili.com/video/BV1nb411G7ny/?spm_id_from=333.788.videocard.1)
 7. 表语关键是找到系动词
 
-另注意：1. 定语从句，which 是修饰的名词不确定，随意的情况，that 通常是确定的情况 2. 主语， 宾语，表语，同位语 都是在说是一件事，是一种对事情的描述，所有就如同名词一样，就叫名词性从句。
+关于形式宾语：
+We all think that she didn't come a pity. 在这个句子中a pity 是宾语补足语。这里主句显得比较轻，从句显得比较重，为了避免这种情况就用it 做形式宾语。
+We all think it 's a pity that she didn't come. 这里是宾语从句，可不是主语从句，因为前面有动词think.
+
+另注意：
+- 1. 定语从句，which 是修饰的名词不确定，随意的情况，that 通常是确定的情况 
+
+- 2. 主语， 宾语，表语，同位语 都是在说是一件事，是一种对事情的描述，所有就如同名词一样，就叫名词性从句。
+
+- 3. 英语中的动词 和 动作是不一样的，例如think 等思维中的动词都不能算动作，也不能用副词去修饰。真正的动作动词前面默认是可以加助动词do的。
