--- a/英语14种基本时态.md
+++ b/英语14种基本时态.md
@@ -1,8 +1,43 @@
 引用：[8种基本时态](https://www.bilibili.com/video/BV1hJ411s751?from=search&seid=5657358972961915785)
 
+- 首先是确定 4 中状态，这个状态跟时间没有任何的关系，仅仅和动作的状态有关系。
+
 |  动词状态名称  | 结构  | 中文标志词        |
 |  ----   |    ----   |     ----        |
 | 一般    | 0 + do/did | 经常、每x/ 过，了 |
 | 进行    | be + doing |  正在，正，在  |
 | 将来    | w? + do      | 将要，将，要，就|
 | 完成    | ha? + done  | 已经、还未|
+
+- 其次是 确定有 两种 时间：过去 和 现在
+- 然后就是 上面4个状态 与 2 个时间 组合 形成 8 个基本的时态
+
+下面分别给出8 个例句：
+- 1. I always sleep at 8pm.
+- 2. He ate breakfast at 8am.
+- 3. I am learning English,Don't disturb me.
+- 4. When I came to his home,he was learning English.
+- 5. I will sell my old iPhone soon after.
+- 6. Yesterday he told me he would learn English.
+- 7. I have been in Shanghai for 6 years thereabout.
+- 8. When I came to his home,he already has finished his homework.
+需要补充的是将来时 还可以用be + going + to 或者 进行时结构 + 将来时状语 等方式表示。
+
+[6中组合时态](https://www.bilibili.com/video/BV1HJ411s7vN)
+这后面的6种组合时态是为了让 前面的几种时态描述的更细致用的。
+除了前面的一般状态以外，可以取后面的三种状态 进行，将来和完成 两两组合，形成以下三种状态
+将来进行，完成进行；将来完成；
+|  动词状态名称  | 结构  | 中文标志词        |
+|   将来进行  | w? + be doing  | 将正在 （仿佛头脑中有一个画面）|
+|   完成进行  | ha? + been doing | 已经，正在，一直 |
+|   将来完成  | w? + have + done  | 将已经 |
+
+上面的 3 个 组合的状态 分别 用现在 和 过去时间 就形成 6 个组合的时态：
+1. I will be swimming in the swimming pool at 6pm,Beacuse I have inveted my friend Tom to go swim that time.
+2. Yestoday, I said I would be swimming in the swimming pool at 6pm,But I did't do it.
+3. I will have been doing my job when you will come to my home.
+4. I said I would have been doing my job when you would come to my home.But nothing happened.
+5. I will have finished my degree this time in the next year.
+6. Yestoday I said I would finished my degree in the next year,But now I feel it is impossible.
+
+
