--- a/英语14种基本时态.md
+++ b/英语14种基本时态.md
@@ -20,7 +20,7 @@
 - 5. I will sell my old iPhone soon after.
 - 6. Yesterday he told me he would learn English.
 - 7. I have been in Shanghai for 6 years thereabout.
-- 8. When I came to his home,he already has finished his homework.
+- 8. When I came to his home,he already had finished his homework.
 需要补充的是将来时 还可以用be + going + to 或者 进行时结构 + 将来时状语 等方式表示。
 
 [6中组合时态](https://www.bilibili.com/video/BV1HJ411s7vN)
