--- a/虚拟语气.md
+++ b/虚拟语气.md
@@ -26,7 +26,9 @@
 #### 笔记：
 英语中的语气有：陈述语气，祈使语气和虚拟语气 ，虚拟语气就是”说假话“；虚拟语气通常用在条件句中。条件句分为两种，一种是假的条件句就是虚拟语气，一种是真实的假设。
 
- Summarize:if 引导的条件句有两种：一种是表示客观规律和常识，一种是对将来的客观假设；剩下的都是虚拟语气，是对现在，将来和过去的一种虚拟的假设，仿佛是做梦穿越时间做什么事情。
+#### Summarize:
+if 引导的条件句有两种：一种是表示客观规律和常识，一种是对将来的客观假设；剩下的都是虚拟语气，是对现在，将来和过去的一种虚拟的假设，仿佛是做梦穿越时间做什么事情。
+凡是虚拟语气条件句主句必然要用情态动词 would,should,might 等，所以这也是一种区别。
 
 
 
