--- a/虚拟语气.md
+++ b/虚拟语气.md
@@ -15,11 +15,16 @@
 - 4. The Third Conditional 是对过去的假设（过去已经过去了，假设就变成了一种虚拟，一种情感上的感慨;if + 过去完成时(had  done), 主句 would/could/should/might + 现在完成时（have done)
 例如：If I had graduated from the university,I would have been a manager.
 
+对于第三点我觉得还是有问题的，如果是对将来假设，应该是 过去式 ,should do ,或were to do 最好加上一个表示将来的时间状语，比如tomorrow.
+[参考](https://zhidao.baidu.com/question/681347735226806452.html)
+例句：I wouldn't go out,if it were to rain tomorrow/if it should be rainy tomorrow. 过去式的话最好还是加上时间状语，不然会和第三点虚拟现在冲突。
+If he came here,I would wecome him. == if he came here tomorrow, I would wecome him.
+
 虚拟语气还可以用wish 来引出：
 1. I wish I could travel back in time to see the Einstein. 这是对现在的假设，是一种白日梦。====  hope 则通常是可以实现的
 2. I wish we had not gone through the COVID in 2020 early. 这个是对已经发生的事情进行假设，就是对过去的假设。
 
-对于第三点我觉得还是有问题的，如果是对将来假设，应该是 一般过去时 ,should do ,或were to do 最好加上一个表示将来的时间状语，比如tomorrow.
+
 
 
 [高考英语语法全解析之虚拟语气](https://www.bilibili.com/video/BV17t411W73e?from=search&seid=11870140865896940500)
