--- a/虚拟语气.md
+++ b/虚拟语气.md
@@ -1,39 +1,38 @@
-听课链接：[10分钟搞定虚拟语气](https://www.bilibili.com/video/BV1z4411u79p?from=search&seid=14122421081112136679)
-
 ```我们中学时期被老师耽误了，教材人为的给了很多生硬的概念来把原本有机一体的知识，划分的支离破碎，难以理解。```
-
+[Conditionals in English](https://www.bilibili.com/video/BV1rg4y1i7zM?p=1)
 #### 笔记：
-- 1. ```Present Conditional``` 这个表达的是一般的规律，常识的假设；if + 一般现在时，主句一般现在时
-例如：If I am surrounded by strangers,I feel unsafe.
+```zero conditional(是基本的规律，常识就像命题一样，不过这里是真命题)```:
+If you eat too mush sweets,you gain weight.
+If you want to be in good shape,exercise twice a week.
 
-- 2. ```The First Conditional``` 这个是对未来的一种假设，也是常规的假设；if + 一般现在时，主句一般将来时
-例如：If you don't do anything,you won't be able to decide if you like it or not.
+```first conditional(又称真实条件句，主要用于陈述语气，假设bai的情况可能发生，不能用be + going to do 代替 shall,will)```:
+You won't get enough vitamins,if you don't eat fresh fruits.
+If I can wake up early enough,I will come.
 
-- 3. ```The Secound Conditional``` 这个是对现在或者将来的一种虚拟的假设(事实上是不可能，或没有先例发生的，违反常识和逻辑）；if + 一般过去时，主句 would/could/should/might + do
-例如：If I were you,I would buy that car.
+```secound conditional (与现在或将来事实相反的条件句)```:
+If you didn't eat so many sweets any more,you would lose weight.
+I wouldn't drink packaged juice,if I were you.
+If it were to rain tomorrow, I wouldn't go out.(多半明天是会下雨的，这种情况应该是比较少的）
 
-- 4. ```The Third Conditional``` 是对过去的假设（过去已经过去了，假设就变成了一种虚拟，一种情感上的感慨;if + 过去完成时(had  done), 主句 would/could/should/might + 现在完成时（have done)
-例如：If I had graduated from the university,I would have been a manager.
+```third conditional(与过去事实相反的条件句)```:
+I would have been on time If traffic hadn't been so bad.
+If I hadn't gained so much weight,I would have been more energetic.
 
-对于第三点我觉得还是有问题的，如果是对将来假设，应该是 过去式 ,should do ,或were to do 最好加上一个表示将来的时间状语，比如tomorrow.
-[参考](https://zhidao.baidu.com/question/681347735226806452.html)
-例句：I wouldn't go out,if it were to rain tomorrow/if it should be rainy tomorrow. 过去式的话最好还是加上时间状语，不然会和第三点虚拟现在冲突。
-If he came here,I would wecome him. == if he came here tomorrow, I would wecome him.
 
 虚拟语气还可以用wish 来引出：
 1. I wish I could travel back in time to see the Einstein. 这是对现在的假设，是一种白日梦。====  hope 则通常是可以实现的
 2. I wish we had not gone through the COVID in 2020 early. 这个是对已经发生的事情进行假设，就是对过去的假设。
 
 还有疑问句中加上虚拟条件句的情况比如：
-How could I take care of my kids if I were not at home? 这种情况是对主句进行提问，从句保持不变，还是要对应的形式表达。所以特别小心虚拟条件句的时态部分。
+How could I take care of my kids if I were not at home? 这种情况是对主句进行提问，从句保持不变。
 
 [高考英语语法全解析之虚拟语气](https://www.bilibili.com/video/BV17t411W73e?from=search&seid=11870140865896940500)
 #### 笔记：
 英语中的语气有：陈述语气，祈使语气和虚拟语气 ，虚拟语气就是”说假话“；虚拟语气通常用在条件句中。条件句分为两种，一种是假的条件句就是虚拟语气，一种是真实的假设。
 
 #### Summarize:
-if 引导的条件句有两种：一种是表示客观规律和常识，一种是对将来的客观假设；剩下的都是虚拟语气，是对现在，将来和过去的一种虚拟的假设，仿佛是做梦穿越时间做什么事情。
-凡是虚拟语气条件句主句必然要用情态动词 would,should,could,might 等，所以这也是一种区别。
+if 引导的条件句有两种：一种是表示具有客观和可能性的假设；剩下的都是虚拟语气，是对现在，将来和过去的一种虚拟的假想。
+凡是虚拟语气条件句主句必然要用情态动词 would,should,could,might 等，所以这也是一种区别，if 引导的句子都是假想的话，不符合当时的情景。
 
 
 
