--- a/规则现在分词，过去式，过去分词.md
+++ b/规则现在分词，过去式，过去分词.md
@@ -6,7 +6,7 @@
 - 5. 以字母ie结尾的动词，先将变ie为y，再加ing :: die -> dying lie-> lying
 - 6. 动词以“辅音+元音+辅音”结尾的重读音节，双写尾字母,再加-ing :: stop -> stopping run -> running
 
-
+重读闭音节规则：重读闭音节必须是 辅音 + 元音 + 一个辅音字母，而且元音要发短元音,短促有力，像garden den 中的e 其实是不发音的。
 
 #### 规则动词过去式：
 1.直接在词尾加-ed.如:want—daowanted,work—worked,need—needed,clean—cleaned
