--- a/常用介词的解释.md
+++ b/常用介词的解释.md
@@ -15,7 +15,7 @@
 - ####  时间介词
 - in 年 in 月 in 季节 早午晚前还用in
 - at 用于点钟前
-- on 是具体的某一天，```js //有修饰词```，或者就是表示某一天的词，星期，日期，节日等
+- on 是具体的某一天，```es6 //有修饰词```，或者就是表示某一天的词，星期，日期，节日等
 
 - #### 方式介词（穿衣服，乘车等）
 - in 接衣服，鞋帽  with 接饰品，伤疤，等小物件
@@ -26,5 +26,5 @@
 The chair is made of wood.
 The wine is made from grapes.
 ```
-- 2. by 直接加交通工具 in/on ```js //加修饰词``` + 交通工具
+- 2. by 直接加交通工具 in/on ```es6 //加修饰词``` + 交通工具
 - 3. except 除了（不包括）except for 美中不足 besides 除了（包括，有除此之外的意思）这可不是旁边
